# backend_poker_ravvi

./: .coveragerc  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  _setup.py  build_version.py  pyproject.toml  setup.py
dbeaver/: .project
dbeaver/.dbeaver/: credentials-config.json  data-sources.json  project-metadata.json  project-settings.json
dbeaver/Diagrams/: user.erd
docker/: bash.sh  db_up.sh  docker-compose.yml  down.sh  init.sh  reset_db.sh  run_api.sh  run_tests.sh  up.sh
ravvi_poker/: build.py.template  logging.py
ravvi_poker/api/: app.py  auth.py  chat.py  cli.py  clubs.py  debug.py  engine.py  images.py  info.py  informations.py  lobby.py  main.py  tables.py  types.py  user.py  utils.py  ws.py  ws_test2.py
ravvi_poker/bots/: dummy.py
ravvi_poker/client/: __init__.py  cards_set.py  client.py  sample_scenario.py  utilities.py
ravvi_poker/db/: __init__.py  adbi.py  cli.py  dbi.py  listener.py  pool.py  txn.py  utils.py
ravvi_poker/engine/: api_extra_data.py  cards.py  cli.py  event.py  game.py  info.py  jwt.py  main.py  manager.py  passwd.py  player.py  table.py  time.py  user.py
ravvi_poker/game/: bet.py  bot.py  cards.py  client.py  event.py  game.py  hands.py  manager.py  multibank.py  player.py  poker.py  poker_nlh.py  poker_plo.py  table.py  table_base.py  table_ring.py  table_sng.py  user.py
ravvi_poker/utils/: timeout.py  utc.py
ravvi_poker/ws/: app.py  cli.py  client.py  manager.py
ravvi_poker_backend/: events.py  logging.py
ravvi_poker_backend/api/: auth.py  cli.py  clubs.py  main.py  tables.py  user.py  utils.py  ws_test.py  ws_test2.py
ravvi_poker_backend/db/: __init__.py  cli.py  dbi.py
ravvi_poker_backend/drafts/: game_replay.py
ravvi_poker_backend/game/: bet.py  bot.py  cards.py  client.py  event.py  game.py  main.py  manager.py  player.py  table.py
tests/: .coveragerc  check_pg_sub.py  conftest.py  pytest.ini  test_dummy.py  upload_image.py  ws_test_client.py
tests/01_db/: conftest.py  test_01_dbi.py  test_02_txn.py  test_03_listener.py  test_10_device.py  test_11_user.py  test_12_login_session_client.py  test_13_user_login.py  test_14_user_session.py  test_15_user_client.py  test_20_public_table.py  test_20_table_profile.py  test_35_game_profile.py  test_dbi.py
tests/02_api/: test_01_auth_register.py  test_02_auth_password.py  test_02_user_password.py  test_03_auth_login.py  test_04_auth_logout.py  test_05_auth_device.py  test_10_user_profile.py  test_20_clubs.py  test_20_ws.py  test_21_tables.py  test_30_ws.py  test_40_images.py
tests/03_game/: check_cards.py  (+12 more)
(+460 files in other folders)
