[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ravvi-poker"
dynamic = ["version"]
authors = [
    {name = "Alexander Keda", email = "alexander.keda@ravvi.net"},
    {name = "Stanislav Chuprinskiy", email = "stanislav.chuprinskiy@ravvi.net"}
]
description = "Ravvi Poker"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psycopg",
    "fastapi",
    "python-multipart",
    "passlib",
    "PyJWT",
    "PyYAML",
    "uvicorn",
    "gunicorn",
    "websockets",
    "pydantic[email]",
    "aiofiles",
]

[project.optional-dependencies]
tests = [
    "coverage",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "httpx"
]

[project.scripts]
ravvi_poker_db = "ravvi_poker.db.cli:main"
ravvi_poker_api = "ravvi_poker.api.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ravvi_poker*"]
namespaces = false

[tool.setuptools.package-data]
"ravvi_poker.db.schema" = ["*.sql"]
"ravvi_poker.db.deploy" = ["*.sql"]

[tool.setuptools_scm]
write_to = "ravvi_poker/_build.py"
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"
